--- a/login.html
+++ b/login.html
@@ -196,7 +196,7 @@
                     const user = { name: 'Admin', email: emailInput.value, isAdmin: true };
                     localStorage.setItem('civicFixUser', JSON.stringify(user));
                     // Future: redirect to admin dashboard, for now index is fine
-                    window.location.href = 'index.html'; 
+                    window.location.href = 'dashboard.html'; 
                 }
             });
 
@@ -214,4 +214,5 @@
     </script>
 </body>
 </html>
+
 
