--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container mx-auto px-4 py-2 flex justify-between items-center">
           <div class="flex items-center space-x-3">
             <img
-              src="../public/governmentofindia.jpg"
+              src="../public/governmentofindia.png"
               alt="Govt of WB Emblem" class="h-12" />
             <div>
               <p class="font-semibold text-gray-800">Government of India</p>
@@ -612,4 +612,5 @@
 </body>
 
 </html>
+
 
