--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container mx-auto px-4 py-2 flex justify-between items-center">
           <div class="flex items-center space-x-3">
             <img
-              src="../public/governmentofindia.png"
+              src="../Public/governmentofindia.png"
               alt="Govt of WB Emblem" class="h-12" />
             <div>
               <p class="font-semibold text-gray-800">Government of India</p>
@@ -126,14 +126,14 @@
         class="mb-12 relative rounded-xl overflow-hidden shadow-lg h-96 text-white bg-gradient-to-r from-indigo-500 to-indigo-700">
         <div id="slider-container" class="h-full relative">
           <div class="slide absolute w-full h-full opacity-0 transition-opacity duration-700 ease-in-out">
-            <img src="../public/Tram.jpg" class="w-full h-full object-cover" alt="Howrah Bridge, Kolkata" />
+            <img src="../Public/Tram.jpg" class="w-full h-full object-cover" alt="Howrah Bridge, Kolkata" />
           </div>
           <div class="slide absolute w-full h-full opacity-0 transition-opacity duration-700 ease-in-out">
-            <img src="../public/Bridge.jpg" class="w-full h-full object-cover"
+            <img src="../Public/Bridge.jpg" class="w-full h-full object-cover"
               alt="Community volunteers working together" />
           </div>
           <div class="slide absolute w-full h-full opacity-0 transition-opacity duration-700 ease-in-out">
-            <img src="../public/Garbage.jpg" class="w-full h-full object-cover" alt="Kolkata tram on a city street" />
+            <img src="../Public/Garbage.jpg" class="w-full h-full object-cover" alt="Kolkata tram on a city street" />
           </div>
         </div>
 
@@ -612,5 +612,6 @@
 </body>
 
 </html>
+
 
 
