--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -68,15 +76,13 @@
       <div class="bg-gray-100 border-b">
         <div class="container mx-auto px-4 py-2 flex justify-between items-center">
           <div class="flex items-center space-x-3">
-            <img
-              src="../Public/governmentofindia.png"
-              alt="Govt of WB Emblem" class="h-12" />
+            <img src="Public/governmentofindia.png" alt="Govt of WB Emblem" class="h-12" />
             <div>
               <p class="font-semibold text-gray-800">Government of India</p>
               <p class="text-sm text-gray-600">Urban Development & Municipal Affairs</p>
             </div>
           </div>
-          <p class="hidden sm:block text-sm text-gray-700 font-medium">Thursday, 11 September 2025</p>
+          <p class="hidden sm:block text-sm text-gray-700 font-medium" id="current-date">Thursday, 11 September 2025</p>
         </div>
       </div>
       <!-- Main Navigation -->
@@ -124,20 +130,20 @@
       <!-- Hero Section with Image Slider -->
       <section
         class="mb-12 relative rounded-xl overflow-hidden shadow-lg h-96 text-white bg-gradient-to-r from-indigo-500 to-indigo-700">
+        <div class="absolute inset-0 bg-gradient-to-r from-indigo-800/70 to-indigo-500/50 z-1"></div>
         <div id="slider-container" class="h-full relative">
           <div class="slide absolute w-full h-full opacity-0 transition-opacity duration-700 ease-in-out">
-            <img src="../Public/Tram.jpg" class="w-full h-full object-cover" alt="Howrah Bridge, Kolkata" />
+            <img src="Public/Tram.jpg" class="w-full h-full object-cover" alt="Howrah Bridge, Kolkata" />
           </div>
           <div class="slide absolute w-full h-full opacity-0 transition-opacity duration-700 ease-in-out">
-            <img src="../Public/Bridge.jpg" class="w-full h-full object-cover"
+            <img src="Public/Garbage.jpg" class="w-full h-full object-cover"
               alt="Community volunteers working together" />
           </div>
           <div class="slide absolute w-full h-full opacity-0 transition-opacity duration-700 ease-in-out">
-            <img src="../Public/Garbage.jpg" class="w-full h-full object-cover" alt="Kolkata tram on a city street" />
+            <img src="Public/Bridge.jpg" class="w-full h-full object-cover" alt="Kolkata tram on a city street" />
           </div>
         </div>
 
-        <div class="absolute inset-0 bg-gradient-to-r from-indigo-800/70 to-indigo-500/50"></div>
 
         <div class="absolute inset-0 z-20 flex flex-col justify-center p-8 md:p-12">
           <h2 class="text-4xl font-bold mb-4">Make Your City Better</h2>
@@ -247,7 +253,7 @@
               <div class="w-10 h-10 bg-amber-100 text-amber-500 rounded-full flex items-center justify-center"><span
                   class="material-symbols-outlined">workspace_premium</span></div>
               <div>
-                <p class="font-bold text-gray-800">Priya Sharma</p>
+                <p class="font-bold text-gray-800">Md Faijan</p>
                 <p class="text-sm text-gray-500">240 Points</p>
               </div>
             </div>
@@ -256,7 +262,7 @@
               <div class="w-10 h-10 bg-slate-100 text-slate-500 rounded-full flex items-center justify-center"><span
                   class="material-symbols-outlined">military_tech</span></div>
               <div>
-                <p class="font-bold text-gray-800">Amit Kumar</p>
+                <p class="font-bold text-gray-800">Md Mustafa</p>
                 <p class="text-sm text-gray-500">215 Points</p>
               </div>
             </div>
@@ -265,7 +271,7 @@
               <div class="w-10 h-10 bg-sky-100 text-sky-500 rounded-full flex items-center justify-center"><span
                   class="material-symbols-outlined">verified</span></div>
               <div>
-                <p class="font-bold text-gray-800">Sunita Devi</p>
+                <p class="font-bold text-gray-800">Danish Ali</p>
                 <p class="text-sm text-gray-500">190 Points</p>
               </div>
             </div>
@@ -345,7 +351,7 @@
               class="w-16 h-16 bg-[#F0EAFE] text-[#611BF8] rounded-full flex items-center justify-center mx-auto mb-4">
               <span class="material-symbols-outlined text-3xl">assignment_ind</span>
             </div>
-            <h3 class="text-lg font-semibold mb-2">2. City Takes Action</h3>
+            <h3 class="text-lg font-semibold mb-2">2. Authority Takes Action</h3>
             <p class="text-gray-600">Your report is assigned to the correct department for resolution.</p>
           </div>
           <div class="bg-white rounded-xl shadow-md p-6">
@@ -424,7 +430,7 @@
               <a href="#" class="text-gray-400 hover:text-white transition-colors">FAQs</a>
             </li>
             <li>
-              <a href="#" class="text-gray-400 hover:text-white transition-colors">Contact Us</a>
+              <a href="contact.html" class="text-gray-400 hover:text-white transition-colors">Contact Us</a>
             </li>
             <li>
               <a href="#" class="text-gray-400 hover:text-white transition-colors">Privacy Policy</a>
@@ -448,6 +454,7 @@
               </button>
             </div>
           </form>
+
         </div>
       </div>
       <div class="pt-8 border-t border-gray-700 text-center text-gray-400">
@@ -469,7 +476,13 @@
       // Mobile menu toggle
       const mobileMenuBtn = document.getElementById('mobile-menu-btn');
       const mobileMenu = document.getElementById('mobile-menu');
+      const currentDate = document.getElementById('current-date');
       mobileMenuBtn.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
+
+      // Date
+      const now = new Date();
+      const options = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
+      currentDate.textContent = now.toLocaleDateString(undefined, options);
 
       // Mock data for tracking
       const mockReports = [
@@ -612,6 +625,3 @@
 </body>
 
 </html>
-
-
-
