--- a/my-reports.html
+++ b/my-reports.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" class="">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CivicFix ‒ My Reports</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-  <style>
+  <script>
+    /* Configure Tailwind to use class-based dark mode (so dark mode activates when html has class "dark") */
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {},
+      },
+      variants: {
+        extend: {},
+      },
+      plugins: [],
+    };
+    </script>
+    <style>
     body {
       font-family: 'Inter', sans-serif;
     }
@@ -31,23 +38,37 @@
         transform: translateY(0);
       }
     }
-  </style>
+    </style>
+    <script src="https://cdn.tailwindcss.com"></script> 
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="bg-slate-50 min-h-screen flex flex-col">
+<body class="bg-slate-50 dark:bg-gray-900 min-h-screen flex flex-col text-gray-900 dark:text-gray-100 transition-colors duration-300">
+  <!-- Dark Mode Toggle Button -->
+  <button id="theme-toggle" class="fixed top-4 right-4 z-50 px-4 py-2 rounded bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 shadow-md hover:bg-gray-300 dark:hover:bg-gray-600 transition-colors duration-300">
+    🌙 Toggle Dark Mode
+  </button>
+
   <!-- Header same as Dashboard -->
-  <header class="bg-white text-gray-800 shadow-lg sticky top-0 z-50">
-    <div class="bg-gray-100 border-b">
+  <header class="bg-white dark:bg-gray-800 text-gray-800 dark:text-gray-100 shadow-lg sticky top-0 z-50">
+    <div class="bg-gray-100 dark:bg-gray-700 border-b border-gray-200 dark:border-gray-600">
       <div class="container mx-auto px-4 py-2 flex justify-between items-center">
         <div class="flex items-center space-x-3">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Emblem_of_West_Bengal.svg/120px-Emblem_of_West_Bengal.svg.png"
+          <img src="../public/governmentofindia.png"
                alt="Govt of WB Emblem" class="h-12" />
           <div>
-            <p class="font-semibold text-gray-800">Government of West Bengal</p>
-            <p class="text-sm text-gray-600">Urban Development & Municipal Affairs</p>
+            <p class="font-semibold text-gray-800 dark:text-gray-200">Government of West Bengal</p>
+            <p class="text-sm text-gray-600 dark:text-gray-400">Urban Development & Municipal Affairs</p>
           </div>
         </div>
-        <p id="current-date" class="hidden sm:block text-sm text-gray-700 font-medium"></p>
+        <p id="current-date" class="hidden sm:block text-sm text-gray-700 dark:text-gray-300 font-medium"></p>
       </div>
     </div>
     <div class="bg-[#611BF8] text-white">
@@ -64,31 +85,31 @@
         </nav>
         <div class="flex items-center space-x-2 md:space-x-4">
           <div class="flex items-center space-x-2 cursor-pointer hover:bg-white/20 transition-all px-3 py-1 rounded-full">
-            <div id="user-initial" class="w-8 h-8 bg-white text-[#611BF8] rounded-full flex items-center justify-center font-bold text-sm">G</div>
+            <div id="user-initial" class="w-8 h-8 bg-white dark:bg-gray-700 text-[#611BF8] dark:text-indigo-300 rounded-full flex items-center justify-center font-bold text-sm">G</div>
             <span id="user-name" class="font-medium text-sm">Guest</span>
           </div>
-          <button id="mobile-menu-btn" class="md:hidden p-2 rounded-md hover:bg-white/20">
+          <button id="mobile-menu-btn" class="md:hidden p-2 rounded-md hover:bg-white/20 dark:hover:bg-gray-700">
             <span class="material-symbols-outlined text-3xl">menu</span>
           </button>
         </div>
       </div>
     </div>
-    <div id="mobile-menu" class="hidden bg-[#5a18e6] text-white md:hidden">
-      <a href="index.html" class="block px-4 py-3 hover:bg-white/20 transition-colors">Home</a>
-      <a href="my-reports.html" class="block px-4 py-3 bg-white/20 transition-colors">My Reports</a>
-      <a href="about.html" class="block px-4 py-3 hover:bg-white/20 transition-colors">About</a>
-      <a href="contact.html" class="block px-4 py-3 hover:bg-white/20 transition-colors">Contact</a>
+    <div id="mobile-menu" class="hidden bg-[#5a18e6] dark:bg-[#5a18e6] text-white md:hidden">
+      <a href="index.html" class="block px-4 py-3 hover:bg-white/20 dark:hover:bg-gray-700 transition-colors">Home</a>
+      <a href="my-reports.html" class="block px-4 py-3 bg-white/20 dark:bg-gray-700 transition-colors">My Reports</a>
+      <a href="about.html" class="block px-4 py-3 hover:bg-white/20 dark:hover:bg-gray-700 transition-colors">About</a>
+      <a href="contact.html" class="block px-4 py-3 hover:bg-white/20 dark:hover:bg-gray-700 transition-colors">Contact</a>
     </div>
   </header>
 
   <!-- Main Content -->
   <main class="container mx-auto px-4 py-8 flex-grow">
-    <h2 class="text-3xl font-bold text-gray-800 mb-6">My Reports</h2>
+    <h2 class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6">My Reports</h2>
 
     <!-- If no reports, show a placeholder -->
-    <div id="no-reports" class="text-gray-600 text-center py-20">
+    <div id="no-reports" class="text-gray-600 dark:text-gray-400 text-center py-20">
       <p class="mb-4">You haven't submitted any reports yet.</p>
-      <a href="report.html" class="bg-[#611BF8] text-white px-6 py-2 rounded-lg hover:bg-opacity-90 transition-colors">Submit a New Report</a>
+      <a href="report.html" class="bg-[#611BF8] text-white dark:text-gray-200 px-6 py-2 rounded-lg hover:bg-opacity-90 transition-colors">Submit a New Report</a>
     </div>
 
     <!-- Reports List -->
@@ -99,7 +120,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-white py-12">
+  <footer class="bg-gray-800 dark:bg-gray-900 text-white dark:text-gray-200 py-12">
     <div class="container mx-auto px-4">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
         <div>
@@ -107,58 +128,50 @@
             <span class="material-symbols-outlined text-2xl">location_city</span>
             <h3 class="text-xl font-bold">CivicFix</h3>
           </div>
-          <p class="text-gray-400 mb-4">
+          <p class="text-gray-400 dark:text-gray-400 mb-4">
             Empowering citizens to improve their communities through collaborative issue reporting and resolution tracking.
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="text-gray-400 hover:text-white transition-colors">
-              <i class="fa-brands fa-facebook text-xl"></i>
-            </a>
-            <a href="#" class="text-gray-400 hover:text-white transition-colors">
-              <i class="fa-brands fa-twitter text-xl"></i>
-            </a>
-            <a href="#" class="text-gray-400 hover:text-white transition-colors">
-              <i class="fa-brands fa-instagram text-xl"></i>
-            </a>
-            <a href="#" class="text-gray-400 hover:text-white transition-colors">
-              <i class="fa-brands fa-linkedin text-xl"></i>
-            </a>
+            <a href="#" class="text-gray-400 dark:text-gray-500 hover:text-white transition-colors"><i class="fa-brands fa-facebook text-xl"></i></a>
+            <a href="#" class="text-gray-400 dark:text-gray-500 hover:text-white transition-colors"><i class="fa-brands fa-twitter text-xl"></i></a>
+            <a href="#" class="text-gray-400 dark:text-gray-500 hover:text-white transition-colors"><i class="fa-brands fa-instagram text-xl"></i></a>
+            <a href="#" class="text-gray-400 dark:text-gray-500 hover:text-white transition-colors"><i class="fa-brands fa-linkedin text-xl"></i></a>
           </div>
         </div>
         <div>
           <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
           <ul class="space-y-2">
-            <li><a href="index.html" class="text-gray-400 hover:text-white transition-colors">Home</a></li>
-            <li><a href="report.html" class="text-gray-400 hover:text-white transition-colors">Report an Issue</a></li>
-            <li><a href="my-reports.html" class="text-gray-400 hover:text-white transition-colors">My Reports</a></li>
-            <li><a href="contact.html" class="text-gray-400 hover:text-white transition-colors">Contact</a></li>
+            <li><a href="index.html" class="text-gray-400 dark:text-gray-400 hover:text-white transition-colors">Home</a></li>
+            <li><a href="report.html" class="text-gray-400 dark:text-gray-400 hover:text-white transition-colors">Report an Issue</a></li>
+            <li><a href="my-reports.html" class="text-gray-400 dark:text-gray-400 hover:text-white transition-colors">My Reports</a></li>
+            <li><a href="contact.html" class="text-gray-400 dark:text-gray-400 hover:text-white transition-colors">Contact</a></li>
           </ul>
         </div>
         <div>
           <h3 class="text-lg font-semibold mb-4">Support</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Help Center</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-white transition-colors">FAQs</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Contact Us</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Privacy Policy</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Terms of Service</a></li>
+            <li><a href="#" class="text-gray-400 dark:text-gray-400 hover:text-white transition-colors">Help Center</a></li>
+            <li><a href="#" class="text-gray-400 dark:text-gray-400 hover:text-white transition-colors">FAQs</a></li>
+            <li><a href="#" class="text-gray-400 dark:text-gray-400 hover:text-white transition-colors">Contact Us</a></li>
+            <li><a href="#" class="text-gray-400 dark:text-gray-400 hover:text-white transition-colors">Privacy Policy</a></li>
+            <li><a href="#" class="text-gray-400 dark:text-gray-400 hover:text-white transition-colors">Terms of Service</a></li>
           </ul>
         </div>
         <div>
           <h3 class="text-lg font-semibold mb-4">Stay Updated</h3>
-          <p class="text-gray-400 mb-4">Subscribe to our newsletter for updates on civic improvements.</p>
+          <p class="text-gray-400 dark:text-gray-400 mb-4">Subscribe to our newsletter for updates on civic improvements.</p>
           <form>
             <div class="flex">
               <input type="email" placeholder="Your email address"
-                     class="px-4 py-2 rounded-l-lg w-full focus:outline-none text-gray-800 bg-white" />
-              <button class="bg-[#611BF8] hover:bg-[#611BF8] transition-colors px-4 py-2 rounded-r-lg">
+                     class="px-4 py-2 rounded-l-lg w-full focus:outline-none text-gray-800 dark:text-gray-200 bg-white dark:bg-gray-700" />
+              <button class="bg-[#611BF8] hover:bg-[#611BF8] transition-colors px-4 py-2 rounded-r-lg text-white dark:text-gray-200">
                 <span class="material-symbols-outlined">send</span>
               </button>
             </div>
           </form>
         </div>
       </div>
-      <div class="pt-8 border-t border-gray-700 text-center text-gray-400">
+      <div class="pt-8 border-t border-gray-700 dark:border-gray-600 text-center text-gray-400 dark:text-gray-500">
         <p>© 2025 CivicFix. All rights reserved.</p>
       </div>
     </div>
@@ -166,12 +179,35 @@
 
   <!-- Report Detail Modal -->
   <div id="report-detail-modal" class="hidden fixed inset-0 z-[100] items-center justify-center modal-backdrop p-4">
-    <div id="report-detail-content" class="bg-white rounded-lg shadow-2xl w-full max-w-xl p-6 animate-fade-in-up">
+    <div id="report-detail-content" class="bg-white dark:bg-gray-800 rounded-lg shadow-2xl w-full max-w-xl p-6 animate-fade-in-up text-gray-900 dark:text-gray-100">
       <!-- content filled via JS -->
     </div>
   </div>
 
   <script>
+    // On load: apply theme (dark or light) based on localStorage or user system preference
+    (function() {
+      const storedTheme = localStorage.getItem('theme');
+      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+      if (storedTheme === 'dark' || (!storedTheme && prefersDark)) {
+        document.documentElement.classList.add('dark');
+      } else {
+        document.documentElement.classList.remove('dark');
+      }
+    })();
+
+    // Theme toggle button
+    document.getElementById('theme-toggle').addEventListener('click', function() {
+      const htmlEl = document.documentElement;
+      if (htmlEl.classList.contains('dark')) {
+        htmlEl.classList.remove('dark');
+        localStorage.setItem('theme', 'light');
+      } else {
+        htmlEl.classList.add('dark');
+        localStorage.setItem('theme', 'dark');
+      }
+    });
+
     document.addEventListener('DOMContentLoaded', () => {
       // Set current date
       const now = new Date();
@@ -208,20 +244,20 @@
           noReportsEl.classList.add('hidden');
           mockReports.forEach(report => {
             const card = document.createElement('div');
-            card.className = 'bg-white rounded-xl shadow-md p-4 flex justify-between items-start hover:shadow-lg transition-shadow cursor-pointer';
+            card.className = 'bg-white dark:bg-gray-800 rounded-xl shadow-md p-4 flex justify-between items-start hover:shadow-lg transition-shadow cursor-pointer text-gray-900 dark:text-gray-100';
             card.innerHTML = `
               <div>
-                <p class="font-bold text-gray-800">${report.issue}</p>
-                <p class="text-sm text-gray-500 mb-1">${report.location}</p>
-                <p class="text-xs text-gray-400">Date Submitted: ${report.date}</p>
+                <p class="font-bold text-gray-800 dark:text-gray-100">${report.issue}</p>
+                <p class="text-sm text-gray-500 dark:text-gray-400 mb-1">${report.location}</p>
+                <p class="text-xs text-gray-400 dark:text-gray-500">Date Submitted: ${report.date}</p>
               </div>
               <div class="flex flex-col items-end space-y-2">
                 <span class="px-3 py-1 rounded-full text-sm font-medium ${
-                  report.status === 'Pending' ? 'bg-red-200 text-red-800' :
-                  report.status === 'InProgress' ? 'bg-yellow-200 text-yellow-800' :
-                  'bg-green-200 text-green-800'
+                  report.status === 'Pending' ? 'bg-red-200 text-red-800 dark:bg-red-800 dark:text-red-200' :
+                  report.status === 'InProgress' ? 'bg-yellow-200 text-yellow-800 dark:bg-yellow-800 dark:text-yellow-200' :
+                  'bg-green-200 text-green-800 dark:bg-green-800 dark:text-green-200'
                 }">${report.status}</span>
-                <button class="text-sm text-indigo-600 hover:underline" data-id="${report.id}">View Details</button>
+                <button class="text-sm text-indigo-600 dark:text-indigo-400 hover:underline" data-id="${report.id}">View Details</button>
               </div>
             `;
             reportsListEl.appendChild(card);
@@ -243,10 +279,10 @@
       function openDetailModal(report) {
         detailContent.innerHTML = `
           <div class="flex justify-between items-center mb-4">
-            <h3 class="text-xl font-bold text-gray-800">Report Details</h3>
-            <button id="close-report-modal" class="text-gray-500 hover:text-gray-800 text-2xl leading-none">&times;</button>
+            <h3 class="text-xl font-bold text-gray-800 dark:text-gray-100">Report Details</h3>
+            <button id="close-report-modal" class="text-gray-500 dark:text-gray-400 hover:text-gray-800 dark:hover:text-white text-2xl leading-none">&times;</button>
           </div>
-          <div class="space-y-3">
+          <div class="space-y-3 text-gray-900 dark:text-gray-100">
             <p><strong class="font-medium">Tracking ID:</strong> ${report.id}</p>
             <p><strong class="font-medium">Issue:</strong> ${report.issue}</p>
             <p><strong class="font-medium">Location:</strong> ${report.location}</p>
