--- a/report.html
+++ b/report.html
@@ -1,51 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CivicFix - Report an Issue</title>
+    <title>CivicFix ‒ Report an Issue</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script>
+        /* Enable class-based dark mode via Tailwind config */
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {},
+            },
+            variants: {
+                extend: {},
+            },
+            plugins: [],
+        };
+
+    </script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
         }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
-<body class="bg-slate-50">
+<body class="bg-slate-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
+    <!-- Dark Mode Toggle Button -->
+    <button id="theme-toggle"
+        class="fixed top-4 right-4 z-50 px-4 py-2 rounded bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 shadow-md hover:bg-gray-300 dark:hover:bg-gray-600 transition-colors duration-300">
+           <span class="material-symbols-outlined text-sm text-slate-500 transition-opacity duration-200"
+                      id="theme-toggle-icon">light_mode</span>
+    </button>
+
     <div class="container mx-auto px-4 py-8 max-w-2xl">
-        <a href="index.html" class="inline-flex items-center text-gray-600 hover:text-gray-900 mb-6">
+        <a href="index.html"
+            class="inline-flex items-center hover:text-gray-900 dark:hover:text-gray-100 mb-6 text-gray-600 dark:text-gray-300">
             <span class="material-symbols-outlined">arrow_back</span>
             Back to Dashboard
         </a>
-        <div class="bg-white rounded-xl shadow-lg p-8">
-            <h1 class="text-3xl font-bold text-gray-800 mb-2">Report a Civic Issue</h1>
-            <p class="text-gray-600 mb-6">Your report helps us identify and fix problems in the community.</p>
+        <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-8">
+            <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-2">Report a Civic Issue</h1>
+            <p class="text-gray-600 dark:text-gray-300 mb-6">Your report helps us identify and fix problems in the
+                community.</p>
 
             <form id="report-form" class="space-y-6">
                 <!-- User Info (pre-filled) -->
                 <div>
-                    <label for="user-name" class="block text-sm font-medium text-gray-700">Your Name</label>
+                    <label for="user-name" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Your
+                        Name</label>
                     <input type="text" id="user-name"
-                        class="mt-1 block w-full bg-gray-100 px-3 py-2 border border-gray-300 rounded-md" readonly>
+                        class="mt-1 block w-full bg-gray-100 dark:bg-gray-700 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md text-gray-900 dark:text-gray-100"
+                        readonly>
                 </div>
                 <div>
-                    <label for="user-email" class="block text-sm font-medium text-gray-700">Your Email</label>
+                    <label for="user-email" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Your
+                        Email</label>
                     <input type="email" id="user-email"
-                        class="mt-1 block w-full bg-gray-100 px-3 py-2 border border-gray-300 rounded-md" readonly>
+                        class="mt-1 block w-full bg-gray-100 dark:bg-gray-700 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md text-gray-900 dark:text-gray-100"
+                        readonly>
                 </div>
 
                 <!-- Issue Details -->
                 <div>
-                    <label for="issue-type" class="block text-sm font-medium text-gray-700">Type of Issue</label>
+                    <label for="issue-type" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Type of
+                        Issue</label>
                     <select id="issue-type" required
-                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#611BF8]">
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#611BF8] bg-white dark:bg-gray-700 text-gray-900 dark:text-gray-100">
                         <option value="">-- Select an issue type --</option>
                         <option>Pothole</option>
                         <option>Broken Streetlight</option>
@@ -55,20 +83,23 @@
                     </select>
                 </div>
                 <div>
-                    <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+                    <label for="description"
+                        class="block text-sm font-medium text-gray-700 dark:text-gray-300">Description</label>
                     <textarea id="description" rows="3" required
-                        class="mt-1 block w-full border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#611BF8]"
+                        class="mt-1 block w-full border border-gray-300 dark:border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#611BF8] bg-white dark:bg-gray-700 text-gray-900 dark:text-gray-100"
                         placeholder="Describe the issue..."></textarea>
                 </div>
 
                 <!-- Location -->
                 <div>
-                    <label for="location" class="block text-sm font-medium text-gray-700">Location</label>
+                    <label for="location"
+                        class="block text-sm font-medium text-gray-700 dark:text-gray-300">Location</label>
                     <div class="flex gap-2 mt-1">
                         <input type="text" id="location" required
-                            class="flex-grow w-full px-3 py-2 border border-gray-300 rounded-md"
+                            class="flex-grow w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-gray-100"
                             placeholder="Enter address or intersection">
-                        <button type="button" id="get-location-btn" class="p-2 bg-gray-200 hover:bg-gray-300 rounded-md"
+                        <button type="button" id="get-location-btn"
+                            class="p-2 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 rounded-md text-gray-800 dark:text-gray-200"
                             title="Get Current Location">
                             <span class="material-symbols-outlined">my_location</span>
                         </button>
@@ -77,21 +108,24 @@
 
                 <!-- Media Capture -->
                 <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2">Attach Media</label>
+                    <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Attach Media</label>
                     <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
                         <label
-                            class="flex flex-col items-center justify-center p-4 border-2 border-dashed rounded-lg cursor-pointer hover:bg-gray-50">
-                            <span class="material-symbols-outlined text-4xl text-gray-400">photo_camera</span>
+                            class="flex flex-col items-center justify-center p-4 border-2 border-dashed rounded-lg cursor-pointer hover:bg-gray-50 dark:hover:bg-gray-700 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300">
+                            <span
+                                class="material-symbols-outlined text-4xl text-gray-400 dark:text-gray-500">photo_camera</span>
                             <span class="mt-2 text-sm text-center">Click Photo</span>
                             <input type="file" accept="image/*" capture="environment" class="hidden">
                         </label>
                         <label
-                            class="flex flex-col items-center justify-center p-4 border-2 border-dashed rounded-lg cursor-pointer hover:bg-gray-50">
-                            <span class="material-symbols-outlined text-4xl text-gray-400">videocam</span>
+                            class="flex flex-col items-center justify-center p-4 border-2 border-dashed rounded-lg cursor-pointer hover:bg-gray-50 dark:hover:bg-gray-700 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300">
+                            <span
+                                class="material-symbols-outlined text-4xl text-gray-400 dark:text-gray-500">videocam</span>
                             <span class="mt-2 text-sm text-center">Record Video</span>
                             <input type="file" accept="video/*" capture="environment" class="hidden">
                         </label>
-                        <div class="flex flex-col items-center justify-center p-4 border-2 border-dashed rounded-lg">
+                        <div
+                            class="flex flex-col items-center justify-center p-4 border-2 border-dashed rounded-lg bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300">
                             <button type="button" id="record-audio-btn" class="flex flex-col items-center">
                                 <span class="material-symbols-outlined text-4xl text-red-500" id="mic-icon">mic</span>
                                 <span class="mt-2 text-sm text-center" id="mic-label">Record Audio</span>
@@ -110,7 +144,31 @@
             </form>
         </div>
     </div>
+
     <script>
+        // Immediately apply theme before page renders to avoid flicker (FOUC)
+        (function () {
+            const stored = localStorage.getItem('theme');
+            const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+            if (stored === 'dark' || (!stored && prefersDark)) {
+                document.documentElement.classList.add('dark');
+            } else {
+                document.documentElement.classList.remove('dark');
+            }
+        })();
+
+        // Theme toggle button logic
+        document.getElementById('theme-toggle').addEventListener('click', function () {
+            const htmlEl = document.documentElement;
+            if (htmlEl.classList.contains('dark')) {
+                htmlEl.classList.remove('dark');
+                localStorage.setItem('theme', 'light');
+            } else {
+                htmlEl.classList.add('dark');
+                localStorage.setItem('theme', 'dark');
+            }
+        });
+
         document.addEventListener('DOMContentLoaded', () => {
             const user = JSON.parse(localStorage.getItem('civicFixUser'));
             if (!user) {
